corrected alignment of second ipsum

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,9 @@ color: #267d86;
 color: #267d86;
   text-align: right;
 }
-
+.ipsum2 {
+  text-align: right;
+}
 footer {
 color: #fff;
 background: #264d66;
